# Technica.Traces.Blf.Converter

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake.yml
cmake/: args.cmake  pcapng.cmake  pcapng_exporter.cmake  tinyxml2.cmake  zlib.cmake
src/: app.cpp  channels.cpp  channels.hpp  endianness.h
tests/: mapping.json
tests/results/events_from_binlog/: test_CanErrorFrame.pcapng  test_CanErrorFrameExt.pcapng  test_CanFdErrorFrame64.pcapng  test_CanFdMessage.pcapng  test_CanFdMessage64.pcapng  test_CanMessage.pcapng  test_CanMessage2.pcapng  test_EthernetFrame.pcapng  test_EthernetFrameEx.pcapng  test_EthernetFrameForwarded.pcapng  test_FlexRayData.pcapng  test_FlexRaySync.pcapng  test_FlexRayV6Message.pcapng  test_FlexRayV6StartCycleEvent.pcapng  test_FlexRayVFrError.pcapng  test_FlexRayVFrReceiveMsg.pcapng  test_FlexRayVFrReceiveMsgEx.pcapng  test_FlexRayVFrStartCycle.pcapng  test_FlexRayVFrStatus.pcapng  test_LinCrcError.pcapng  test_LinCrcError2.pcapng  test_LinMessage.pcapng  test_LinMessage2.pcapng  test_LinReceiveError.pcapng  test_LinSendError2.pcapng  test_LinSyncError.pcapng  test_LinSyncError2.pcapng
tests/results/events_from_converter/: test_CanErrorExt.pcapng  test_CanErrorFrame.pcapng  test_CanErrorFrameExt.pcapng  test_CanMessage.pcapng  test_EthernetFrame.pcapng  test_FlexRayVFrReceiveMsgEx.pcapng  test_FlexRayVFrStartCycle.pcapng
tests/results/mapping/: from_test_CanMessage.pcapng
vector_blf/: CMakeLists.txt
vector_blf/Vector/BLF/: config.h  vector_blf_export.h
